--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -5400,7 +5400,7 @@
   <data name="AIR PRESSURE NOT OK" xml:space="preserve">
     <value>ضغط الهواء ليس موافق</value>
   </data>
-  <data name="AIR MINIMUM PRESSURE NOT OK (FOR STEPOINT REQUESTED)" xml:space="preserve">
+  <data name="AIR MINIMUM PRESSURE NOT OK (FOR SETPOINT REQUESTED)" xml:space="preserve">
     <value>الحد الأدنى للضغط ليس موافق (لطلب Stepoint)</value>
   </data>
   <data name="MINIMUM PRESSURE NOT OK" xml:space="preserve">
