--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -5400,7 +5400,7 @@
   <data name="AIR PRESSURE NOT OK" xml:space="preserve">
     <value>Presión del aire no es OK</value>
   </data>
-  <data name="AIR MINIMUM PRESSURE NOT OK (FOR STEPOINT REQUESTED)" xml:space="preserve">
+  <data name="AIR MINIMUM PRESSURE NOT OK (FOR SETPOINT REQUESTED)" xml:space="preserve">
     <value>Presión mínima del aire no es OK (para el acoplamiento solicitado)</value>
   </data>
   <data name="MINIMUM PRESSURE NOT OK" xml:space="preserve">
