--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -5723,8 +5723,8 @@
   <data name="AIR PRESSURE NOT OK" xml:space="preserve">
     <value>Air Pressure Not Ok</value>
   </data>
-  <data name="AIR MINIMUM PRESSURE NOT OK (FOR STEPOINT REQUESTED)" xml:space="preserve">
-    <value>Air Minimum Pressure Not Ok (For Stepoint Requested)</value>
+  <data name="AIR MINIMUM PRESSURE NOT OK (FOR SETPOINT REQUESTED)" xml:space="preserve">
+    <value>Air Minimum Pressure Not Ok (For Setpoint Requested)</value>
   </data>
   <data name="MINIMUM PRESSURE NOT OK" xml:space="preserve">
     <value>Minimum Pressure Not Ok</value>
