--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -5400,7 +5400,7 @@
   <data name="AIR PRESSURE NOT OK" xml:space="preserve">
     <value>气压不正常</value>
   </data>
-  <data name="AIR MINIMUM PRESSURE NOT OK (FOR STEPOINT REQUESTED)" xml:space="preserve">
+  <data name="AIR MINIMUM PRESSURE NOT OK (FOR SETPOINT REQUESTED)" xml:space="preserve">
     <value>空气最小压力不正常（请求的台阶）</value>
   </data>
   <data name="MINIMUM PRESSURE NOT OK" xml:space="preserve">
