--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -5400,7 +5400,7 @@
   <data name="AIR PRESSURE NOT OK" xml:space="preserve">
     <value>Luftdruck nicht in Ordnung</value>
   </data>
-  <data name="AIR MINIMUM PRESSURE NOT OK (FOR STEPOINT REQUESTED)" xml:space="preserve">
+  <data name="AIR MINIMUM PRESSURE NOT OK (FOR SETPOINT REQUESTED)" xml:space="preserve">
     <value>Luftmindestdruck nicht in Ordnung (für angeforderte TEPOINT)</value>
   </data>
   <data name="MINIMUM PRESSURE NOT OK" xml:space="preserve">
