--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -5400,8 +5400,8 @@
   <data name="AIR PRESSURE NOT OK" xml:space="preserve">
     <value>Pressione dell'aria non ok</value>
   </data>
-  <data name="AIR MINIMUM PRESSURE NOT OK (FOR STEPOINT REQUESTED)" xml:space="preserve">
-    <value>Pressione minima dell'aria non ok (per il palco richiesto)</value>
+  <data name="AIR MINIMUM PRESSURE NOT OK (FOR SETPOINT REQUESTED)" xml:space="preserve">
+    <value>Pressione minima dell'aria non ok (per il setpoint richiesto)</value>
   </data>
   <data name="MINIMUM PRESSURE NOT OK" xml:space="preserve">
     <value>Pressione minima non ok</value>
