--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -5400,7 +5400,7 @@
   <data name="AIR PRESSURE NOT OK" xml:space="preserve">
     <value>Presiunea aerului nu este OK</value>
   </data>
-  <data name="AIR MINIMUM PRESSURE NOT OK (FOR STEPOINT REQUESTED)" xml:space="preserve">
+  <data name="AIR MINIMUM PRESSURE NOT OK (FOR SETPOINT REQUESTED)" xml:space="preserve">
     <value>Presiunea minimă a aerului nu este OK (pentru Stepoint solicitat)</value>
   </data>
   <data name="MINIMUM PRESSURE NOT OK" xml:space="preserve">
