--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -4216,7 +4216,7 @@
     <value>تحقق من وضع الصمام، إشارات مفاتيح حد لكل من الموضع والضغط في الأنابيب</value>
   </data>
   <data name="INFO_LS_4" xml:space="preserve">
-    <value>تحقق من الجهاز (إذا قد تم حظره) وإشارات كلا مفاتيح الحد من الموضع</value>
+    <value>تحقق من الجهاز. يمكن حظره والتحقق من إشارات كلا مفاتيح حد الموضع</value>
   </data>
   <data name="INFO_LS_5" xml:space="preserve">
     <value>افتح الصمام اليدوي المشار إليه مثبتا على الجهاز</value>
@@ -4246,7 +4246,7 @@
     <value>تحقق من الموضع المغلق في الصمام والضغط في الأنابيب</value>
   </data>
   <data name="INFO_LS_14" xml:space="preserve">
-    <value>تحقق من مفاتيح تحديد موضع الصمام وموضعها وأسلاكها</value>
+    <value>تحقق من مفاتيح حد الموضع وموضعهم وأسلاكهم</value>
   </data>
   <data name="INFO_LS_15" xml:space="preserve">
     <value>تحقق من موضع الصمام والضغط في الأنابيب وموضع مفتاح الحد</value>
