--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -4216,7 +4216,7 @@
     <value>Überprüfen Sie die Ventilposition, die Signale beider Positionsgrenzschalte (en) und den Druck in den Rohren</value>
   </data>
   <data name="INFO_LS_4" xml:space="preserve">
-    <value>Überprüfen Sie das Gerät (falls möglicherweise blockiert) und die Signale der beiden Positionsgrenzschalter</value>
+    <value>Überprüfen Sie das Gerät. Es könnte blockiert werden und die Signale beider Positionsbegrenzungsschalter überprüfen</value>
   </data>
   <data name="INFO_LS_5" xml:space="preserve">
     <value>Öffnen Sie das angegebene manuelles manuelles Ventil, das auf der Maschine installiert ist</value>
@@ -4246,7 +4246,7 @@
     <value>Überprüfen Sie die geschlossene Position und den Druck der Ventil in den Rohren</value>
   </data>
   <data name="INFO_LS_14" xml:space="preserve">
-    <value>Überprüfen Sie die Endschalter der Ventilposition, ihre Position und Verkabelung</value>
+    <value>Überprüfen Sie die Positionsbegrenzungsschalter, ihre Position und Verkabelung</value>
   </data>
   <data name="INFO_LS_15" xml:space="preserve">
     <value>Überprüfen Sie die Ventilposition, den Druck in den Leitungen und die Position des Endschalters</value>
