--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -4216,7 +4216,7 @@
     <value>Verifique La Posición De La Válvula, Las Señales De Ambos Interruptores De Límite De Posición Y La Presión En Las Tuberías</value>
   </data>
   <data name="INFO_LS_4" xml:space="preserve">
-    <value>Verifique El Dispositivo (Si Puede Estar Bloqueado) Y Las Señales De Ambos Interruptores De Límite De Posición</value>
+    <value>Verifique el dispositivo. Podría bloquearse y verificar las señales de ambos interruptores de límite de posición</value>
   </data>
   <data name="INFO_LS_5" xml:space="preserve">
     <value>Abra La Válvula Manual Indicada Instalada En La Máquina</value>
@@ -4246,7 +4246,7 @@
     <value>Verifique La Posición Cerrada De La Válvula Y La Presión En Las Tuberías</value>
   </data>
   <data name="INFO_LS_14" xml:space="preserve">
-    <value>Verifique Los Interruptores De Límite De Posición De Válvula, Su Posición Y Cableado</value>
+    <value>Verifique los interruptores de límite de posición, su posición y cableado</value>
   </data>
   <data name="INFO_LS_15" xml:space="preserve">
     <value>Compruebe La Posición De La Válvula, La Presión En Las Tuberías Y La Posición Del Interruptor De Límite</value>
