--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -4219,7 +4219,7 @@
     <value>בדוק את מיקום השסתום, האותות של שני מתג גבול המיקום (S) והלחץ בצינורות</value>
   </data>
   <data name="INFO_LS_4" xml:space="preserve">
-    <value>בדוק את ההתקן (אם עלול להיות חסום) ואת האותות של שני מתגי הגבלת המיקום</value>
+    <value>בדוק את המכשיר. זה יכול להיות חסום ולבדוק את האותות של שני מתגי הגבלת המיקום</value>
   </data>
   <data name="INFO_LS_5" xml:space="preserve">
     <value>פתח את השסתום הידני המצוין המותקן במכונה</value>
@@ -4249,7 +4249,7 @@
     <value>בדוק את המיקום הסגור של השסתום ולחץ בצינורות</value>
   </data>
   <data name="INFO_LS_14" xml:space="preserve">
-    <value>בדוק את מתגי הגבול של מיקום השסתום, מיקומם והחיווט שלהם</value>
+    <value>בדוק את מתגי מגבלת המיקום, מיקומם וחיווטם</value>
   </data>
   <data name="INFO_LS_15" xml:space="preserve">
     <value>בדוק את מיקום השסתום, את הלחץ בצינורות ואת מיקום מתג הגבול</value>
