--- a/Prevu.Localization/Properties/Resources.pt.resx
+++ b/Prevu.Localization/Properties/Resources.pt.resx
@@ -4219,7 +4219,7 @@
     <value>Verifique a posição da válvula, os sinais dos interruptores de limite de posição e a pressão nos tubos</value>
   </data>
   <data name="INFO_LS_4" xml:space="preserve">
-    <value>Verifique o dispositivo (se estiver bloqueado) e os sinais de ambos os interruptores de limite de posição</value>
+    <value>Verifique o dispositivo. Pode ser bloqueado e verifique os sinais de ambos os interruptores de limite de posição</value>
   </data>
   <data name="INFO_LS_5" xml:space="preserve">
     <value>Abra a válvula manual indicada instalada na máquina</value>
@@ -4249,7 +4249,7 @@
     <value>Verifique a posição fechada da válvula e a pressão nos tubos</value>
   </data>
   <data name="INFO_LS_14" xml:space="preserve">
-    <value>Verifique os interruptores de limite de posição da válvula, sua posição e fiação</value>
+    <value>Verifique os interruptores de limite de posição, sua posição e fiação</value>
   </data>
   <data name="INFO_LS_15" xml:space="preserve">
     <value>Verifique a posição da válvula, pressão nos tubos e posição do interruptor limite</value>
