--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -4314,7 +4314,7 @@
     <comment>InfoText Fault</comment>
   </data>
   <data name="INFO_LS_4" xml:space="preserve">
-    <value>Check The Device (If May Blocked) And The Signals Of Both Position Limit Switches</value>
+    <value>Check The Device. It Could Be Blocked And Check The Signals Of Both Position Limit Switches</value>
     <comment>InfoText Fault</comment>
   </data>
   <data name="INFO_LS_5" xml:space="preserve">
@@ -4354,7 +4354,7 @@
     <comment>InfoText Fault</comment>
   </data>
   <data name="INFO_LS_14" xml:space="preserve">
-    <value>Check The Valve Position Limit Switches, Their Position And Wiring</value>
+    <value>Check The Position Limit Switches, Their Position And Wiring</value>
     <comment>InfoText Fault</comment>
   </data>
   <data name="INFO_LS_15" xml:space="preserve">
