--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -4219,7 +4219,7 @@
     <value>Verificați poziția supapei, semnalele ambelor comutatoare de limită de poziție și presiunea în conducte</value>
   </data>
   <data name="INFO_LS_4" xml:space="preserve">
-    <value>Verificați dispozitivul (dacă poate fi blocat) și semnalele ambelor întrerupătoare de limită de poziție</value>
+    <value>Verificați dispozitivul. Ar putea fi blocat și verificat semnalele ambelor întrerupătoare de limită de poziție</value>
   </data>
   <data name="INFO_LS_5" xml:space="preserve">
     <value>Deschideți supapa manuală indicată instalată pe mașină</value>
@@ -4249,7 +4249,7 @@
     <value>Verificați poziția închisă a supapei și presiunea în conducte</value>
   </data>
   <data name="INFO_LS_14" xml:space="preserve">
-    <value>Verificați întrerupătoarele limită de poziție a supapei, poziția și cablarea acestora</value>
+    <value>Verificați întrerupătoarele de limită de poziție, poziția și cablarea lor</value>
   </data>
   <data name="INFO_LS_15" xml:space="preserve">
     <value>Verificați poziția supapei, presiunea în conducte și limitați poziția comutatorului</value>
