--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -4216,7 +4216,7 @@
     <value>检查阀门位置，位置限制开关的信号和管道中的压力</value>
   </data>
   <data name="INFO_LS_4" xml:space="preserve">
-    <value>检查设备（如果可能会阻止）和位置限制开关的信号</value>
+    <value>检查设备。它可以阻止并检查两个位置限制开关的信号</value>
   </data>
   <data name="INFO_LS_5" xml:space="preserve">
     <value>打开安装在机器上的指示手动阀门</value>
@@ -4246,7 +4246,7 @@
     <value>检查阀门闭合位置和管道中的压力</value>
   </data>
   <data name="INFO_LS_14" xml:space="preserve">
-    <value>检查阀位限位开关及其位置和接线</value>
+    <value>检查位置限制开关，其位置和接线</value>
   </data>
   <data name="INFO_LS_15" xml:space="preserve">
     <value>检查阀门位置、管道压力和限位开关位置</value>
