--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -4219,7 +4219,7 @@
     <value>Controllare la posizione della valvola, i segnali di entrambi i finecorsa di posizione e la pressione nei tubi</value>
   </data>
   <data name="INFO_LS_4" xml:space="preserve">
-    <value>Controllare il dispositivo (se può essere bloccato) ei segnali di entrambi i finecorsa di posizione</value>
+    <value>Controllare il dispositivo. Potrebbe essere bloccato e controllare i segnali di entrambi gli interruttori di limite di posizione</value>
   </data>
   <data name="INFO_LS_5" xml:space="preserve">
     <value>Aprire la valvola manuale indicata installata sulla macchina</value>
@@ -4249,7 +4249,7 @@
     <value>Controllare la posizione chiusa della valvola e la pressione nei tubi</value>
   </data>
   <data name="INFO_LS_14" xml:space="preserve">
-    <value>Controllare i finecorsa di posizione della valvola, la loro posizione e il cablaggio</value>
+    <value>Controllare gli interruttori del limite di posizione, la loro posizione e il cablaggio</value>
   </data>
   <data name="INFO_LS_15" xml:space="preserve">
     <value>Controllare la posizione della valvola, la pressione nei tubi e la posizione dell'interruttore di finecorsa</value>
