Update Italian Localization

--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -1174,7 +1174,7 @@
     <value>Estop premuto (anta delil Quadro)</value>
   </data>
   <data name="CABINET OFF" xml:space="preserve">
-    <value>Gabinetto spento</value>
+    <value>Quadro spento</value>
   </data>
   <data name="ETHERNET SWITCH NOT OK" xml:space="preserve">
     <value>Switch Ethernet non ok</value>
@@ -1951,7 +1951,7 @@
     <value>Simulazione programma plc attiva</value>
   </data>
   <data name="CABINET TEST ACTIVE" xml:space="preserve">
-    <value>Test gabinetto attivo</value>
+    <value>Test quadro attivo</value>
   </data>
   <data name="ESTOP AREA NOT RESET (WITH ALL ESTOP PBS OK)" xml:space="preserve">
     <value>Area Estop non ripristinata (con tutti i Pbs Estop ok)</value>
@@ -3331,7 +3331,7 @@
     <value>Simulazione PLC</value>
   </data>
   <data name="_PLC_CABINET_TEST_MODE" xml:space="preserve">
-    <value>Modalità test del gabinetto PLC</value>
+    <value>Modalità test del quadro PLC</value>
   </data>
   <data name="_PLC_SIMULATION_INIT" xml:space="preserve">
     <value>PLC Simulation init</value>
@@ -3898,7 +3898,7 @@
     <value>Sovraccarico 24 V DC sotto estop</value>
   </data>
   <data name="CABINET COOLING OVERLOAD" xml:space="preserve">
-    <value>Sovraccarico di raffreddamento del gabinetto</value>
+    <value>Sovraccarico di raffreddamento del quadro </value>
   </data>
   <data name="OVERLOAD 24V DC OF ESTOP CIRCUIT" xml:space="preserve">
     <value>Sovraccarico 24 V DC del circuito estop</value>
