--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -7992,4 +7992,40 @@
   <data name="An error has occurred:" xml:space="preserve">
     <value>حدث خطأ:</value>
   </data>
+  <data name="TREND ANALYZER" xml:space="preserve">
+    <value>محلل الاتجاه</value>
+  </data>
+  <data name="1 MINUTE" xml:space="preserve">
+    <value>1 دقيقة</value>
+  </data>
+  <data name="48 HOURS" xml:space="preserve">
+    <value>48 ساعة</value>
+  </data>
+  <data name="72 HOURS" xml:space="preserve">
+    <value>72 ساعة</value>
+  </data>
+  <data name="EXPORT COMPLETED SUCCESSFULLY" xml:space="preserve">
+    <value>تم الانتهاء من التصدير بنجاح</value>
+  </data>
+  <data name="SELECT TREND" xml:space="preserve">
+    <value>حدد الاتجاه</value>
+  </data>
+  <data name="LIMIT" xml:space="preserve">
+    <value>حد</value>
+  </data>
+  <data name="ABOVE" xml:space="preserve">
+    <value>فوق</value>
+  </data>
+  <data name="EQUAL" xml:space="preserve">
+    <value>متساوي</value>
+  </data>
+  <data name="BELOW" xml:space="preserve">
+    <value>أقل</value>
+  </data>
+  <data name="AVERAGE" xml:space="preserve">
+    <value>متوسط</value>
+  </data>
+  <data name="FROM" xml:space="preserve">
+    <value>من</value>
+  </data>
 </root>
