--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -7992,4 +7992,40 @@
   <data name="An error has occurred:" xml:space="preserve">
     <value>Ein Fehler ist aufgetreten:</value>
   </data>
+  <data name="TREND ANALYZER" xml:space="preserve">
+    <value>Trendanalysator</value>
+  </data>
+  <data name="1 MINUTE" xml:space="preserve">
+    <value>1 Minute</value>
+  </data>
+  <data name="48 HOURS" xml:space="preserve">
+    <value>48 Stunden</value>
+  </data>
+  <data name="72 HOURS" xml:space="preserve">
+    <value>72 Stunden</value>
+  </data>
+  <data name="EXPORT COMPLETED SUCCESSFULLY" xml:space="preserve">
+    <value>Export erfolgreich abgeschlossen</value>
+  </data>
+  <data name="SELECT TREND" xml:space="preserve">
+    <value>Wählen Sie Trend</value>
+  </data>
+  <data name="LIMIT" xml:space="preserve">
+    <value>Grenze</value>
+  </data>
+  <data name="ABOVE" xml:space="preserve">
+    <value>Über</value>
+  </data>
+  <data name="EQUAL" xml:space="preserve">
+    <value>Gleich</value>
+  </data>
+  <data name="BELOW" xml:space="preserve">
+    <value>Unten</value>
+  </data>
+  <data name="AVERAGE" xml:space="preserve">
+    <value>Durchschnitt</value>
+  </data>
+  <data name="FROM" xml:space="preserve">
+    <value>Aus</value>
+  </data>
 </root>
