--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -7992,4 +7992,40 @@
   <data name="An error has occurred:" xml:space="preserve">
     <value>Se ha producido un error:</value>
   </data>
+  <data name="TREND ANALYZER" xml:space="preserve">
+    <value>Analizador de tendencias</value>
+  </data>
+  <data name="1 MINUTE" xml:space="preserve">
+    <value>1 minuto</value>
+  </data>
+  <data name="48 HOURS" xml:space="preserve">
+    <value>48 horas</value>
+  </data>
+  <data name="72 HOURS" xml:space="preserve">
+    <value>72 horas</value>
+  </data>
+  <data name="EXPORT COMPLETED SUCCESSFULLY" xml:space="preserve">
+    <value>Exportación completada con éxito</value>
+  </data>
+  <data name="SELECT TREND" xml:space="preserve">
+    <value>Seleccionar tendencia</value>
+  </data>
+  <data name="LIMIT" xml:space="preserve">
+    <value>Límite</value>
+  </data>
+  <data name="ABOVE" xml:space="preserve">
+    <value>Arriba</value>
+  </data>
+  <data name="EQUAL" xml:space="preserve">
+    <value>Igual</value>
+  </data>
+  <data name="BELOW" xml:space="preserve">
+    <value>Abajo</value>
+  </data>
+  <data name="AVERAGE" xml:space="preserve">
+    <value>Promedio</value>
+  </data>
+  <data name="FROM" xml:space="preserve">
+    <value>De</value>
+  </data>
 </root>
