--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -7992,4 +7992,40 @@
   <data name="An error has occurred:" xml:space="preserve">
     <value>אירעה שגיאה:</value>
   </data>
+  <data name="TREND ANALYZER" xml:space="preserve">
+    <value>מנתח מגמה</value>
+  </data>
+  <data name="1 MINUTE" xml:space="preserve">
+    <value>דקה 1</value>
+  </data>
+  <data name="48 HOURS" xml:space="preserve">
+    <value>48 שעות</value>
+  </data>
+  <data name="72 HOURS" xml:space="preserve">
+    <value>72 שעות</value>
+  </data>
+  <data name="EXPORT COMPLETED SUCCESSFULLY" xml:space="preserve">
+    <value>הייצוא הושלם בהצלחה</value>
+  </data>
+  <data name="SELECT TREND" xml:space="preserve">
+    <value>בחר מגמה</value>
+  </data>
+  <data name="LIMIT" xml:space="preserve">
+    <value>לְהַגבִּיל</value>
+  </data>
+  <data name="ABOVE" xml:space="preserve">
+    <value>מֵעַל</value>
+  </data>
+  <data name="EQUAL" xml:space="preserve">
+    <value>שווה</value>
+  </data>
+  <data name="BELOW" xml:space="preserve">
+    <value>לְהַלָן</value>
+  </data>
+  <data name="AVERAGE" xml:space="preserve">
+    <value>מְמוּצָע</value>
+  </data>
+  <data name="FROM" xml:space="preserve">
+    <value>מ</value>
+  </data>
 </root>
