--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -7992,4 +7992,40 @@
   <data name="An error has occurred:" xml:space="preserve">
     <value>C'è stato un errore:</value>
   </data>
+  <data name="TREND ANALYZER" xml:space="preserve">
+    <value>Analizzatore di tendenza</value>
+  </data>
+  <data name="1 MINUTE" xml:space="preserve">
+    <value>1 minuto</value>
+  </data>
+  <data name="48 HOURS" xml:space="preserve">
+    <value>48 ore</value>
+  </data>
+  <data name="72 HOURS" xml:space="preserve">
+    <value>72 ore</value>
+  </data>
+  <data name="EXPORT COMPLETED SUCCESSFULLY" xml:space="preserve">
+    <value>L'esportazione completata con successo</value>
+  </data>
+  <data name="SELECT TREND" xml:space="preserve">
+    <value>Seleziona Trend</value>
+  </data>
+  <data name="LIMIT" xml:space="preserve">
+    <value>Limite</value>
+  </data>
+  <data name="ABOVE" xml:space="preserve">
+    <value>Sopra</value>
+  </data>
+  <data name="EQUAL" xml:space="preserve">
+    <value>Pari</value>
+  </data>
+  <data name="BELOW" xml:space="preserve">
+    <value>Sotto</value>
+  </data>
+  <data name="AVERAGE" xml:space="preserve">
+    <value>Media</value>
+  </data>
+  <data name="FROM" xml:space="preserve">
+    <value>Da</value>
+  </data>
 </root>
