--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -8330,4 +8330,40 @@
   <data name="An error has occurred:" xml:space="preserve">
     <value>An error has occurred:</value>
   </data>
+  <data name="TREND ANALYZER" xml:space="preserve">
+    <value>Trend Analyzer</value>
+  </data>
+  <data name="1 MINUTE" xml:space="preserve">
+    <value>1 minute</value>
+  </data>
+  <data name="48 HOURS" xml:space="preserve">
+    <value>48 hours</value>
+  </data>
+  <data name="72 HOURS" xml:space="preserve">
+    <value>72 hours</value>
+  </data>
+  <data name="EXPORT COMPLETED SUCCESSFULLY" xml:space="preserve">
+    <value>Export Completed Successfully</value>
+  </data>
+  <data name="SELECT TREND" xml:space="preserve">
+    <value>Select Trend</value>
+  </data>
+  <data name="LIMIT" xml:space="preserve">
+    <value>Limit</value>
+  </data>
+  <data name="ABOVE" xml:space="preserve">
+    <value>Above</value>
+  </data>
+  <data name="EQUAL" xml:space="preserve">
+    <value>Equal</value>
+  </data>
+  <data name="BELOW" xml:space="preserve">
+    <value>Below</value>
+  </data>
+  <data name="AVERAGE" xml:space="preserve">
+    <value>Average</value>
+  </data>
+  <data name="FROM" xml:space="preserve">
+    <value>From</value>
+  </data>
 </root>
