--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -7992,4 +7992,40 @@
   <data name="An error has occurred:" xml:space="preserve">
     <value>A avut loc o eroare:</value>
   </data>
+  <data name="TREND ANALYZER" xml:space="preserve">
+    <value>Analizator de tendințe</value>
+  </data>
+  <data name="1 MINUTE" xml:space="preserve">
+    <value>1 minut</value>
+  </data>
+  <data name="48 HOURS" xml:space="preserve">
+    <value>48 de ore</value>
+  </data>
+  <data name="72 HOURS" xml:space="preserve">
+    <value>72 de ore</value>
+  </data>
+  <data name="EXPORT COMPLETED SUCCESSFULLY" xml:space="preserve">
+    <value>Exportul finalizat cu succes</value>
+  </data>
+  <data name="SELECT TREND" xml:space="preserve">
+    <value>Selectați Trend</value>
+  </data>
+  <data name="LIMIT" xml:space="preserve">
+    <value>Limită</value>
+  </data>
+  <data name="ABOVE" xml:space="preserve">
+    <value>De mai sus</value>
+  </data>
+  <data name="EQUAL" xml:space="preserve">
+    <value>Egal</value>
+  </data>
+  <data name="BELOW" xml:space="preserve">
+    <value>De mai jos</value>
+  </data>
+  <data name="AVERAGE" xml:space="preserve">
+    <value>In medie</value>
+  </data>
+  <data name="FROM" xml:space="preserve">
+    <value>Din</value>
+  </data>
 </root>
