--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -7992,4 +7992,40 @@
   <data name="An error has occurred:" xml:space="preserve">
     <value>发生了错误：</value>
   </data>
+  <data name="TREND ANALYZER" xml:space="preserve">
+    <value>趋势分析仪</value>
+  </data>
+  <data name="1 MINUTE" xml:space="preserve">
+    <value>1分钟</value>
+  </data>
+  <data name="48 HOURS" xml:space="preserve">
+    <value>48小时</value>
+  </data>
+  <data name="72 HOURS" xml:space="preserve">
+    <value>72小时</value>
+  </data>
+  <data name="EXPORT COMPLETED SUCCESSFULLY" xml:space="preserve">
+    <value>出口成功完成</value>
+  </data>
+  <data name="SELECT TREND" xml:space="preserve">
+    <value>选择趋势</value>
+  </data>
+  <data name="LIMIT" xml:space="preserve">
+    <value>限制</value>
+  </data>
+  <data name="ABOVE" xml:space="preserve">
+    <value>多于</value>
+  </data>
+  <data name="EQUAL" xml:space="preserve">
+    <value>平等的</value>
+  </data>
+  <data name="BELOW" xml:space="preserve">
+    <value>以下</value>
+  </data>
+  <data name="AVERAGE" xml:space="preserve">
+    <value>平均的</value>
+  </data>
+  <data name="FROM" xml:space="preserve">
+    <value>从</value>
+  </data>
 </root>
