Prevu.localization: Prima revisione testi

--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -2771,7 +2771,7 @@
     <value>Rotor Reverse Interval</value>
   </data>
   <data name="SHREDDING AND PUSHER INCHING" xml:space="preserve">
-    <value>Shredding And Pusher Inching</value>
+    <value>Shredding And Pusher Inching mode</value>
   </data>
   <data name="RESET CYCLE - PUSHER COMPLETE BACKWARD" xml:space="preserve">
     <value>Reset Cycle - Pusher Complete Backward</value>
@@ -8284,6 +8284,7 @@
   </data>
   <data name="M_INFO_SILOS_NOK" xml:space="preserve">
     <value>Silos Not Available To Be Filled. Check The Filling Status And All Ather Conditions And settings Of Silos.</value>
+    <comment>InfoText Fault</comment>
   </data>
   <data name="Image Saved With Success" xml:space="preserve">
     <value>Image Saved With Success</value>
