Localization: Update on mA (milliAmpere)

--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -1372,7 +1372,7 @@
     <value>Mensaje</value>
   </data>
   <data name="(4-20MA)" xml:space="preserve">
-    <value>(4-20 Ma)</value>
+    <value>(4-20 mA)</value>
   </data>
   <data name="MOTOR MAXIMUM AMPERAGE EXCEEDED (&gt;115% OF NOMINAL AMP FOR 15 SEC)" xml:space="preserve">
     <value>Amperaje Máximo Del Motor Excedido (&gt;115 % Del Amperaje Nominal Durante 15 Segundos)</value>
