--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -1258,7 +1258,7 @@
     <value>信息</value>
   </data>
   <data name="(4-20MA)" xml:space="preserve">
-    <value>(4-20Ma)</value>
+    <value>(4-20 mA)</value>
   </data>
   <data name="MOTOR MAXIMUM AMPERAGE EXCEEDED (&gt;115% OF NOMINAL AMP FOR 15 SEC)" xml:space="preserve">
     <value>超过电机最大电流（&gt; 115% 的标称电流，持续 15 秒）</value>
